<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey_f3f3f3"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">
        <TextView
           style="@style/titleTvStyle"
            android:text="@string/app_name"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp">
        <EditText
            android:id="@+id/mian_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="1"
            android:background="@drawable/main_et_bg"
            android:hint="@string/main_et_hint"/>
        <ImageView
            android:id="@+id/main_iv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/search"
            android:onClick="onClick"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        android:weightSum="2">
        <TextView
            android:id="@+id/main_tv_pinyin"
            style="@style/mainTvStyle"
            android:drawableTop="@mipmap/m_pinyin"
            android:text="@string/main_tv_pinyin"/>

        <TextView
            android:id="@+id/main_tv_bushou"
            style="@style/mainTvStyle"
            android:drawableTop="@mipmap/m_bushou"
            android:text="@string/main_tv_bushou"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:padding="20dp"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="@string/main_tv_yiju"/>
        <TextView
            android:id="@+id/mian_tv_juzi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/main_tv_yiju2"
            android:textSize="14sp"/>
    </LinearLayout>
</LinearLayout>